# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

module_output_path = "kv_store/common"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../",
    "${kv_store_base_path}/interfaces/innerkits/distributeddata/include",
  ]
}

###############################################################################
ohos_unittest("ConcurrentMapTest") {
  module_out_path = module_output_path

  sources = [ "concurrent_map_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("ExecutorPoolTest") {
  module_out_path = module_output_path

  sources = [ "executor_pool_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("LruBucketTest") {
  module_out_path = module_output_path

  sources = [ "lru_bucket_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("TaskSchedulerTest") {
  module_out_path = module_output_path

  sources = [ "task_scheduler_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("TraitsTest") {
  module_out_path = module_output_path

  sources = [ "traits_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("PoolTest") {
  module_out_path = module_output_path

  sources = [ "pool_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

ohos_unittest("PriorityQueueTest") {
  module_out_path = module_output_path

  sources = [ "priority_queue_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "//third_party/googletest:gtest" ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = []
  deps += [
    ":ConcurrentMapTest",
    ":ExecutorPoolTest",
    ":LruBucketTest",
    ":PoolTest",
    ":PriorityQueueTest",
    ":TaskSchedulerTest",
    ":TraitsTest",
  ]
}
###############################################################################
