# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

ohos_shared_library("kv_store_crypt") {
  sanitize = {
    boundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
      "${kv_store_base_path}/frameworks/common",
      "${kv_store_base_path}/frameworks/innerkitsimpl/crypt",
  ]

  sources = [
    "${kv_store_base_path}/frameworks/innerkitsimpl/crypt/kv_store_crypt.cpp",
  ]

  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  cflags_cc = [ "-fvisibility=hidden", "-Werror=vla", ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "huks:libhukssdk",
  ]

  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}