# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributeddb_path =
    "//foundation/distributeddatamgr/kv_store/frameworks/libs/distributeddb"

distributeddb_src = [
  "${distributeddb_path}/common/src/auto_launch.cpp",
  "${distributeddb_path}/common/src/data_compression.cpp",
  "${distributeddb_path}/common/src/data_value.cpp",
  "${distributeddb_path}/common/src/db_common.cpp",
  "${distributeddb_path}/common/src/db_constant.cpp",
  "${distributeddb_path}/common/src/db_dfx_adapter.cpp",
  "${distributeddb_path}/common/src/db_dump_helper.cpp",
  "${distributeddb_path}/common/src/evloop/src/event_impl.cpp",
  "${distributeddb_path}/common/src/evloop/src/event_loop_epoll.cpp",
  "${distributeddb_path}/common/src/evloop/src/event_loop_impl.cpp",
  "${distributeddb_path}/common/src/evloop/src/event_loop_select.cpp",
  "${distributeddb_path}/common/src/evloop/src/ievent.cpp",
  "${distributeddb_path}/common/src/evloop/src/ievent_loop.cpp",
  "${distributeddb_path}/common/src/flatbuffer_schema.cpp",
  "${distributeddb_path}/common/src/hash.cpp",
  "${distributeddb_path}/common/src/json_object.cpp",
  "${distributeddb_path}/common/src/lock_status_observer.cpp",
  "${distributeddb_path}/common/src/log_print.cpp",
  "${distributeddb_path}/common/src/notification_chain.cpp",
  "${distributeddb_path}/common/src/param_check_utils.cpp",
  "${distributeddb_path}/common/src/parcel.cpp",
  "${distributeddb_path}/common/src/performance_analysis.cpp",
  "${distributeddb_path}/common/src/platform_specific.cpp",
  "${distributeddb_path}/common/src/query.cpp",
  "${distributeddb_path}/common/src/query_expression.cpp",
  "${distributeddb_path}/common/src/ref_object.cpp",
  "${distributeddb_path}/common/src/relational/prepared_stmt.cpp",
  "${distributeddb_path}/common/src/relational/relational_result_set_impl.cpp",
  "${distributeddb_path}/common/src/relational/relational_row_data_set.cpp",
  "${distributeddb_path}/common/src/relational/relational_schema_object.cpp",
  "${distributeddb_path}/common/src/relational/table_info.cpp",
  "${distributeddb_path}/common/src/relational/tracker_table.cpp",
  "${distributeddb_path}/common/src/runtime_context.cpp",
  "${distributeddb_path}/common/src/runtime_context_impl.cpp",
  "${distributeddb_path}/common/src/schema_constant.cpp",
  "${distributeddb_path}/common/src/schema_negotiate.cpp",
  "${distributeddb_path}/common/src/schema_object.cpp",
  "${distributeddb_path}/common/src/schema_utils.cpp",
  "${distributeddb_path}/common/src/semaphore_utils.cpp",
  "${distributeddb_path}/common/src/task_pool.cpp",
  "${distributeddb_path}/common/src/task_pool_impl.cpp",
  "${distributeddb_path}/common/src/task_queue.cpp",
  "${distributeddb_path}/common/src/time_tick_monitor.cpp",
  "${distributeddb_path}/common/src/types_export.cpp",
  "${distributeddb_path}/common/src/user_change_monitor.cpp",
  "${distributeddb_path}/common/src/value_object.cpp",
  "${distributeddb_path}/common/src/zlib_compression.cpp",
  "${distributeddb_path}/communicator/src/combine_status.cpp",
  "${distributeddb_path}/communicator/src/communicator.cpp",
  "${distributeddb_path}/communicator/src/communicator_aggregator.cpp",
  "${distributeddb_path}/communicator/src/communicator_linker.cpp",
  "${distributeddb_path}/communicator/src/frame_combiner.cpp",
  "${distributeddb_path}/communicator/src/frame_retainer.cpp",
  "${distributeddb_path}/communicator/src/header_converter.cpp",
  "${distributeddb_path}/communicator/src/message_transform.cpp",
  "${distributeddb_path}/communicator/src/network_adapter.cpp",
  "${distributeddb_path}/communicator/src/protocol_proto.cpp",
  "${distributeddb_path}/communicator/src/send_task_scheduler.cpp",
  "${distributeddb_path}/communicator/src/serial_buffer.cpp",
  "${distributeddb_path}/interfaces/src/intercepted_data_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_changed_data_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_delegate_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_delegate_manager.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_errno.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_nb_conflict_data_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_nb_delegate_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_result_set_impl.cpp",
  "${distributeddb_path}/interfaces/src/kv_store_snapshot_delegate_impl.cpp",
  "${distributeddb_path}/interfaces/src/relational/relational_store_changed_data_impl.cpp",
  "${distributeddb_path}/interfaces/src/relational/relational_store_delegate_impl.cpp",
  "${distributeddb_path}/interfaces/src/relational/relational_store_manager.cpp",
  "${distributeddb_path}/interfaces/src/relational/relational_store_sqlite_ext.cpp",
  "${distributeddb_path}/interfaces/src/runtime_config.cpp",
  "${distributeddb_path}/storage/src/cloud/cloud_meta_data.cpp",
  "${distributeddb_path}/storage/src/cloud/cloud_storage_utils.cpp",
  "${distributeddb_path}/storage/src/cloud/schema_mgr.cpp",
  "${distributeddb_path}/storage/src/data_transformer.cpp",
  "${distributeddb_path}/storage/src/db_properties.cpp",
  "${distributeddb_path}/storage/src/default_factory.cpp",
  "${distributeddb_path}/storage/src/single_ver_utils.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_single_ver_result_set.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_single_ver_natural_store_connection.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_single_ver_natural_store.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_utils.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_single_ver_storage_executor.cpp",
  "${distributeddb_path}/storage/src/gaussdb_rd/rd_single_ver_storage_engine.cpp",
  "${distributeddb_path}/storage/src/generic_kvdb.cpp",
  "${distributeddb_path}/storage/src/generic_kvdb_connection.cpp",
  "${distributeddb_path}/storage/src/generic_single_ver_kv_entry.cpp",
  "${distributeddb_path}/storage/src/iconnection.cpp",
  "${distributeddb_path}/storage/src/ikvdb_factory.cpp",
  "${distributeddb_path}/storage/src/kvdb_commit_notify_filterable_data.cpp",
  "${distributeddb_path}/storage/src/kvdb_manager.cpp",
  "${distributeddb_path}/storage/src/kvdb_observer_handle.cpp",
  "${distributeddb_path}/storage/src/kvdb_properties.cpp",
  "${distributeddb_path}/storage/src/kvdb_utils.cpp",
  "${distributeddb_path}/storage/src/kvdb_windowed_result_set.cpp",
  "${distributeddb_path}/storage/src/multiver/generic_multi_ver_kv_entry.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_commit.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_kvdata_storage.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store_commit_notify_data.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store_commit_storage.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store_connection.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store_snapshot.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_natural_store_transfer_data.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_storage_engine.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_storage_executor.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_vacuum.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_vacuum_executor_impl.cpp",
  "${distributeddb_path}/storage/src/multiver/multi_ver_value_object.cpp",
  "${distributeddb_path}/storage/src/operation/database_oper.cpp",
  "${distributeddb_path}/storage/src/operation/local_database_oper.cpp",
  "${distributeddb_path}/storage/src/operation/multi_ver_database_oper.cpp",
  "${distributeddb_path}/storage/src/operation/single_ver_database_oper.cpp",
  "${distributeddb_path}/storage/src/package_file.cpp",
  "${distributeddb_path}/storage/src/relational_row_data_impl.cpp",
  "${distributeddb_path}/storage/src/relational_store_connection.cpp",
  "${distributeddb_path}/storage/src/relational_store_instance.cpp",
  "${distributeddb_path}/storage/src/relational_sync_able_storage.cpp",
  "${distributeddb_path}/storage/src/relational_sync_data_inserter.cpp",
  "${distributeddb_path}/storage/src/relationaldb_properties.cpp",
  "${distributeddb_path}/storage/src/result_entries_window.cpp",
  "${distributeddb_path}/storage/src/single_ver_natural_store.cpp",
  "${distributeddb_path}/storage/src/single_ver_natural_store_connection.cpp",
  "${distributeddb_path}/storage/src/single_ver_natural_store_commit_notify_data.cpp",
  "${distributeddb_path}/storage/src/sqlite/cloud_sync_log_table_manager.cpp",
  "${distributeddb_path}/storage/src/sqlite/collaboration_log_table_manager.cpp",
  "${distributeddb_path}/storage/src/sqlite/log_table_manager_factory.cpp",
  "${distributeddb_path}/storage/src/sqlite/query_object.cpp",
  "${distributeddb_path}/storage/src/sqlite/query_sync_object.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/relational_remote_query_continue_token.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/sqlite_relational_database_upgrader.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/sqlite_relational_store.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/sqlite_relational_store_connection.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/sqlite_relational_utils.cpp",
  "${distributeddb_path}/storage/src/sqlite/relational/sqlite_single_relational_storage_engine.cpp",
  "${distributeddb_path}/storage/src/sqlite/simple_tracker_log_table_manager.cpp",
  "${distributeddb_path}/storage/src/sqlite/split_device_log_table_manager.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_local_kvdb.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_local_kvdb_connection.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_local_kvdb_snapshot.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_local_storage_engine.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_local_storage_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_log_table_manager.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_meta_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_multi_ver_data_storage.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_multi_ver_transaction.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_query_helper.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_continue_token.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_database_upgrader.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_forward_cursor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_natural_store.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_natural_store_connection.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_relational_continue_token.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_relational_storage_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_relational_storage_extend_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_result_set.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_schema_database_upgrader.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_storage_engine.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_storage_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_storage_executor_cache.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_single_ver_storage_executor_subscribe.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_storage_engine.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_storage_executor.cpp",
  "${distributeddb_path}/storage/src/sqlite/sqlite_utils.cpp",
  "${distributeddb_path}/storage/src/storage_engine.cpp",
  "${distributeddb_path}/storage/src/storage_engine_manager.cpp",
  "${distributeddb_path}/storage/src/storage_executor.cpp",
  "${distributeddb_path}/storage/src/storage_proxy.cpp",
  "${distributeddb_path}/storage/src/sync_able_engine.cpp",
  "${distributeddb_path}/storage/src/sync_able_kvdb.cpp",
  "${distributeddb_path}/storage/src/sync_able_kvdb_connection.cpp",
  "${distributeddb_path}/storage/src/upgrader/single_ver_database_upgrader.cpp",
  "${distributeddb_path}/storage/src/upgrader/single_ver_schema_database_upgrader.cpp",
  "${distributeddb_path}/syncer/src/ability_sync.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_force_pull_strategy.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_force_push_strategy.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_merge_strategy.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_db_proxy.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_locker.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_syncer.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_sync_tag_assets.cpp",
  "${distributeddb_path}/syncer/src/cloud/cloud_sync_utils.cpp",
  "${distributeddb_path}/syncer/src/cloud/process_notifier.cpp",
  "${distributeddb_path}/syncer/src/cloud/strategy_factory.cpp",
  "${distributeddb_path}/syncer/src/commit_history_sync.cpp",
  "${distributeddb_path}/syncer/src/communicator_proxy.cpp",
  "${distributeddb_path}/syncer/src/db_ability.cpp",
  "${distributeddb_path}/syncer/src/device_manager.cpp",
  "${distributeddb_path}/syncer/src/generic_syncer.cpp",
  "${distributeddb_path}/syncer/src/meta_data.cpp",
  "${distributeddb_path}/syncer/src/multi_ver_data_sync.cpp",
  "${distributeddb_path}/syncer/src/multi_ver_sync_engine.cpp",
  "${distributeddb_path}/syncer/src/multi_ver_sync_state_machine.cpp",
  "${distributeddb_path}/syncer/src/multi_ver_sync_task_context.cpp",
  "${distributeddb_path}/syncer/src/multi_ver_syncer.cpp",
  "${distributeddb_path}/syncer/src/query_sync_water_mark_helper.cpp",
  "${distributeddb_path}/syncer/src/remote_executor.cpp",
  "${distributeddb_path}/syncer/src/remote_executor_packet.cpp",
  "${distributeddb_path}/syncer/src/single_ver_data_message_schedule.cpp",
  "${distributeddb_path}/syncer/src/single_ver_data_packet.cpp",
  "${distributeddb_path}/syncer/src/single_ver_data_sync.cpp",
  "${distributeddb_path}/syncer/src/single_ver_data_sync_utils.cpp",
  "${distributeddb_path}/syncer/src/single_ver_kv_sync_task_context.cpp",
  "${distributeddb_path}/syncer/src/single_ver_kv_syncer.cpp",
  "${distributeddb_path}/syncer/src/single_ver_relational_sync_task_context.cpp",
  "${distributeddb_path}/syncer/src/single_ver_relational_syncer.cpp",
  "${distributeddb_path}/syncer/src/single_ver_serialize_manager.cpp",
  "${distributeddb_path}/syncer/src/single_ver_sync_engine.cpp",
  "${distributeddb_path}/syncer/src/single_ver_sync_state_machine.cpp",
  "${distributeddb_path}/syncer/src/single_ver_sync_target.cpp",
  "${distributeddb_path}/syncer/src/single_ver_sync_task_context.cpp",
  "${distributeddb_path}/syncer/src/single_ver_syncer.cpp",
  "${distributeddb_path}/syncer/src/subscribe_manager.cpp",
  "${distributeddb_path}/syncer/src/sync_config.cpp",
  "${distributeddb_path}/syncer/src/sync_engine.cpp",
  "${distributeddb_path}/syncer/src/sync_operation.cpp",
  "${distributeddb_path}/syncer/src/sync_state_machine.cpp",
  "${distributeddb_path}/syncer/src/sync_target.cpp",
  "${distributeddb_path}/syncer/src/sync_task_context.cpp",
  "${distributeddb_path}/syncer/src/syncer_factory.cpp",
  "${distributeddb_path}/syncer/src/syncer_proxy.cpp",
  "${distributeddb_path}/syncer/src/time_helper.cpp",
  "${distributeddb_path}/syncer/src/time_sync.cpp",
  "${distributeddb_path}/syncer/src/value_slice_sync.cpp",
]
